# technique-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
clis/storage-cli/: Cargo.toml  README.md
clis/storage-cli/src/: conf.rs  lib.rs  operators.rs
clis/storage-cli/src/cmd/: devops_cmd.rs  file_operation.rs
